exports[`Wizard Component should render different components 1`] = `
<div
  className="wizard">
  <img
    height="120"
    src="path_to_the_icon"
    width="120" />
  <h1 />
  <button
    className="coz-btn coz-btn--regular"
    onClick={[Function]}
    role="button" />
</div>
`;

exports[`Wizard Component should render different components 2`] = `
<div
  className="wizard">
  <p />
  <input
    placeholder={undefined}
    type="text" />
  <p />
  <button
    className="coz-btn coz-btn--regular"
    onClick={undefined}
    role="button" />
</div>
`;
